별점 테두리 흰색으로 수정 how : line69의 select->select.form-select 로 변경

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         input[type=url]:focus,
         input[type=text]:focus,
-        select:focus,
+        select.form-select:focus,
         #comment:focus,
         #floatingSelect {
             background-color: transparent;
